# libapplefw

./: .gitignore  COPYING  KNOWN_APIS.md  Makefile  Makefile.am  autogen.sh  config.h  configure.ac  configure~  libtool
include/: Makefile.am  applefw.h
include/applefw/: device_tree.h
src/: Makefile.am  device_tree.c  device_tree.lo  libapplefw.la  lzss.c  lzss.lo  power_manager.c  power_manager.lo
src/.libs/: libapplefw.0.dylib  libapplefw.dylib  libapplefw.la  libapplefw.lai
tools/: Makefile.am  dt  dt.c  pmgr  pmgr.c
tools/.libs/: dt  pmgr
